# dailyinfo

./: .env.example  .gitignore  README.md  pyproject.toml
config/: remote_host.env.example  source_registry.yml
docs/superpowers/plans/: 2026-07-01-reader-web-service.md
docs/superpowers/specs/: 2026-07-01-reader-analytics-mobile-design.md  2026-07-01-reader-web-service-design.md
imports/: README.md
ops/launchd/: com.paul.info-radar-web.plist
src/info_radar/: __init__.py  api_credentials.py  cli.py  config.py  dedupe.py  directions.py  fetchers.py  importers.py  models.py  pipeline.py  publish.py  published_report.py  render.py  scoring.py  store.py  web_app.py
tests/: test_api_credentials.py  test_candidate_packet.py  test_default_registry.py  test_fetchers.py  test_importers.py  test_publish.py  test_published_report.py  test_registry.py  test_render.py  test_scoring_and_grouping.py  test_store_and_cli.py  test_web_app.py
web/: app.js  index.html  settings.css  settings.html  settings.js  styles.css
