[project]
name = "info-radar"
version = "0.1.0"
description = "Local-first daily decision radar for Obsidian Markdown output."
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "feedparser>=6.0.11",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
info-radar = "info_radar.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
